2009-01-10  Mark Ellis  <mark@mpellis.org.uk>

	* 0.13 release

2009-01-05  Mark Ellis  <mark@mpellis.org.uk>

	* redo functions that release the python GIL in pyrex style

2009-01-02  Mark Ellis  <mark@mpellis.org.uk>

	* check for NULL returns from wstr conversions
	* python/pyrapi2.pyx - fix warning checking for invalid handle

2008-12-18  Mark Ellis  <mark@mpellis.org.uk>

	* configure.ac.in - require at least python 2.3, pyrex doesn't
	  support 2.2; check pyrex version when python > 2.4

2008-10-29  Mark Ellis  <mark@mpellis.org.uk>

	* python/pyrapi2.pyx - enhance RAPIError exception, add error
	  checking to remaining functions

2008-10-28  Mark Ellis  <mark@mpellis.org.uk>

	* tools/pcp.c - fix for copying <source> file to <dest> dir

2008-10-27  Mark Ellis  <mark@mpellis.org.uk>

	* src/rapi_buffer.c - remove writev(), causes problems at least
	  on FreeBSD, and provides no benefit
	* configure.ac.in - remove checks for writev() and readv()

2008-09-10  Mark Ellis  <mark@mpellis.org.uk>

	* src/rapi_indirection.c - enable CeSetEndOfFile()

2008-08-19  Mark Ellis  <mark@mpellis.org.uk>

	* python/pyrapi2.pyx - don't segfault on empty strings

2008-08-11  Mark Ellis  <mark@mpellis.org.uk>

	* tools/pls.c - option for recursive listing
	* tools/man/pls.1 - man page update for recursive listing

2008-06-17  Mark Ellis  <mark@mpellis.org.uk>

	* recursive directory copy for pcp

2008-06-07  Mark Ellis  <mark@mpellis.org.uk>

	* more useful error messages for pls and pcp

2008-05-19  Mark Ellis  <mark@mpellis.org.uk>

	* rewrite rapi 1 CeReadRecordProps() and CeWriteRecordProps() to
	  account for non-32 bit host pointers

2008-05-11  Mark Ellis  <mark@mpellis.org.uk>

	* remaining dummy functions for unimplemented calls

2008-05-09  Mark Ellis  <mark@mpellis.org.uk>

	* introduced dummy functions for most calls represented in the
	  header but not implemented, returns failure with rapi error
	  set to E_NOTIMPL instead of segfaulting