@@ -1,3 +1,8 @@
+2009-01-13  Mark Ellis  <mark@mpellis.org.uk>
+
+	* python/pyrapi2.pyc - flagged functions that appear in nogil
+	  sections as nogil, fixes build failure with pyrex > 0.9.8.1
+
 2009-01-10  Mark Ellis  <mark@mpellis.org.uk>
 
 	* 0.13 release
